fix(game live): 100vh issue on iOS (v3)

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -19,18 +19,9 @@
        url('/fonts/alegreya-sans-v21-latin-900.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
 }
 
-.min-safe-h-screen {
-  /* equivalent to 100dvh in major browsers */
-  min-height: calc(
-    100vh - env(safe-area-inset-bottom, 0) - env(safe-area-inset-top, 0)
-  );
-}
-
-@supports (-webkit-touch-callout: none) {
-  .min-safe-h-screen {
-    /* for ios safari 15, safe-area-inset-bottom is 0, so a special fix apply here */
-    min-height: -webkit-fill-available;
-  }
+.h-screen-mobile {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
 }
 
 @import "tailwindcss/base";
